--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="Wimukthi Indeewara"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Harikrushn | Portfolio" />
+    <meta property="og:title" content="Wimukthi Indeewara" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://harikanani.github.io/" />
 
